# content-shotgun

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
content-machine/instructions/: README.md
content-machine/instructions/01-global/: INSTRUCTIONS.md
content-machine/instructions/02-workspace/: INSTRUCTIONS.md
content-machine/instructions/03-topic/: INSTRUCTIONS.md
contracts/templates/: instructions.md  master.md  topic.json  workspace.md
docs/: APP_WORKFLOW_ARCHITECTURE.md  EXTERNAL_AGENT_DERIVATIVE_INSTRUCTIONS.md
scripts/: scaffold-workspace.mjs  validate-workspace-contract.mjs  workspace-contract.mjs
skills/openclaw/: SKILL.md
src/: App.tsx  EditorWindow.tsx  appBridge.ts  editorContent.ts  imageEditorSource.ts  main.tsx  styles.css  topicSelection.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: editor-content.test.mjs  image-editor-source.test.mjs  topic-selection.test.mjs  workspace-contract.test.mjs
